--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           root: my_workspace
           paths:
             - echo-output
-      - run: notacommand
+      # - run: notacommand
   say_hello:
     docker:
       - image: circleci/ruby:2.4.1
