--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 version: 2
 jobs:
-  will_fail:
+  pass_data:
     docker:
       - image: circleci/ruby:2.4.1
     steps:
       - checkout
-      - run: echo "This workflow will fail"
+      - run: echo "Going to pass some data to another job"
       - run: mkdir -p my_workspace
       - run: echo "Can we pass this to another workspace?" > my_workspace/echo-output
       - persist_to_workspace:
@@ -13,7 +13,20 @@ jobs:
           root: my_workspace
           paths:
             - echo-output
-      # - run: notacommand
+  # will_fail:
+  #   docker:
+  #     - image: circleci/ruby:2.4.1
+  #   steps:
+  #     - checkout
+  #     - run: echo "This workflow will fail"
+  #     - run: mkdir -p my_workspace
+  #     - run: echo "Can we pass this to another workspace?" > my_workspace/echo-output
+  #     - persist_to_workspace:
+  #         # Must be an absolute path, or relative path from working_directory
+  #         root: my_workspace
+  #         paths:
+  #           - echo-output
+  #     - run: notacommand
   say_hello:
     docker:
       - image: circleci/ruby:2.4.1
@@ -31,21 +44,22 @@ jobs:
           fi
 workflows:
   version: 2
-  say_hello_and_fail:
-    # This workflow will fail because of the order of how data is persisted.
+  # say_hello_and_fail:
+  #   # This workflow will fail because of the order of how data is persisted.
+  #   jobs:
+  #     - say_hello
+  #     - will_fail:
+  #         requires:
+  #           - say_hello
+  pass_data_and_say_hello:
     jobs:
-      - say_hello
-      - will_fail:
-          requires:
-            - say_hello
-  fail_and_say_hello:
-    jobs:
-      - will_fail
+      - pass_data
+      # Any name can be used for the 'hold' job as long as `type: approval` is set
       - hold:
           type: approval
           requires:
-            - will_fail
+            - pass_data
       - say_hello:
           requires:
             - hold
-            - will_fail
+            - pass_data
