--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,9 +57,10 @@ workflows:
       # Any name can be used for the 'hold' job as long as `type: approval` is set
       - hold:
           type: approval
+          # master branch should skip approval
           filters:
             branches:
-              ignore: /br2/
+              ignore: /master/
           requires:
             - pass_data
       - say_hello:
