--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
       image: ubuntu-1604:201903-01
       docker_layer_caching: true
     steps:
+      - run:
+          name: Is this a PR?
+          command: echo $CIRCLE_PULL_REQUEST
       - checkout
       - run:
           name: Create stuff
