--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,14 @@ version: 2.1
 
 jobs:
   job_1:
-    machine:
-      image: ubuntu-1604:201903-01
+    docker:
+      - image: ubuntu:14.04
     steps:
       - run:
-          name: Is this a PR?
-          command: echo $CIRCLE_PULL_REQUEST
+          name: Work in Progress
+          command: echo abc123
 
 workflows:
-  doot_doot:
-    jobs:
-      - job_1:
-          filters:
-            tags:
-              only: /.*/
+  to-be-determined:
+     jobs:
+       - job_1
